--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@ header {
         background-color: #424E61;
         color: white;
     }
-
+    .cabecalho-imagem{
+        width: 20%;
+    }
+      
         
                     
                     
