--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 }
 
 .escola-imagem{
-    width: 25%;
+    width: 20%;
 }
 
 .escola{
@@ -41,3 +41,44 @@
 .escola-titulo{
     padding: 24px 0;
 }
+.estudante-imagem{
+    width: 120px;
+}
+
+.estudante-icone{
+    width: 24px;
+    padding: 4px 8px;
+}
+
+.estudante-div{
+    text-align: center;
+    padding: 16px 0;
+
+    #escola{
+        background-image: linear-gradient(#424E61,#5f5dd6);
+        color:white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 24px 0;
+    }
+    .cabecalho-lista-item a{
+        text-decoration: none; 
+        color: white;
+    }
+    .estudante-todos{
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20% 20%;
+    }
+    .estudante-titulo{
+        text-align: center;
+        padding: 24px 0;
+    }
+    .rodape{
+        background-color: black;
+        text-align: center;
+    }
+    .rodape-imagem{
+        height: 60px;
+        padding: 12px 0;
+    }
