--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@
 .estudante-div{
     text-align: center;
     padding: 16px 0;
+}
 
     #escola{
         background-image: linear-gradient(#424E61,#5f5dd6);
